# ethersrs-problem

./: Cargo.toml  build.rs
adapters/: Cargo.toml
adapters/src/: lib.rs  test_abi.rs
src/: main.rs
