[package]
name = "ethers-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0",  features = ["ws", "rustls", "ipc"] }
tokio = {version = "1.19.0", features = ["full"]}
adapters = { path = "./adapters"}

[build-dependencies]
ethers = { version = "1.0.0",  features = ["abigen"] }